# engine_sandbox

./: .gitignore  .gitmodules  3  CMakeLists.txt  README.txt  address_sanitize.sh  debug.bat  debug.sh  dump.sh  install.bat  install.sh  pack_installer.sh  perf.sh  run.bat  run.sh  test.sh  thread_sanitize.sh  undefined_behaviour_sanitize.sh  web_debug.sh  web_release.sh
assets/fonts/: default_medium.kasfnt  default_small.kasfnt
assets/shaders/: color.frag  color.vert  gles_color.frag  gles_color.vert  gles_lightning.vert  gles_proxy3d.frag  gles_proxy3d.vert  gles_ui.frag  gles_ui.vert  lightning.frag  lightning.vert  proxy3d.vert  ui.frag  ui.vert
assets/sprites/: dynamic.ssff  led.ssff
include/: CMakeLists.txt  ds_allocator.h  ds_arch.h  ds_atomic.h  ds_base.h  ds_define.h  ds_error.h  ds_log.h  ds_semaphore.h  ds_string.h  ds_thread.h  ds_time.h  ds_types.h  ticket_factory.h
lib/: CMakeLists.txt
lib/dtoa/: CMakeLists.txt  dtoa.c  dtoa.h
lib/opengl/: CMakeLists.txt
src/asset_system/: CMakeLists.txt  asset_database.c  asset_font.c  asset_init.c  asset_local.h  asset_public.h  asset_ssff.c
src/base/: CMakeLists.txt  ds_allocator.c  ds_arch.c  ds_base.c  ds_error.c  ds_log.c  ds_semaphore.c  ds_string.c  ds_thread.c  ds_time.c  ticket_factory.c
src/common/: CMakeLists.txt  kas_common.h  kas_debug.h  kas_types.h
src/containers/: CMakeLists.txt  array_list.c  array_list.h  bit_vector.c  bit_vector.h  hash_map.c  hash_map.h  hierarchy_index.c  hierarchy_index.h  kas_vector.c  kas_vector.h  list.c  list.h  net_list.c  net_list.h  queue.c  queue.h  string_database.c  string_database.h  tree.c  tree.h
src/containers/parallel/: CMakeLists.txt  fifo_mpsc.c  fifo_mpsc.h  fifo_spmc.c  fifo_spmc.h  fifo_spsc.c  fifo_spsc.h  ticket_factory.c  ticket_factory.h
src/led/: CMakeLists.txt  csg.c  csg.h  led_core.c  led_init.c  led_local.h  led_main.c  led_public.h  led_ui.c  led_utility.c  led_visual.c
src/math/: CMakeLists.txt
src/math/collision/: CMakeLists.txt  bvh.c  collision.c  collision.h  collision_debug.c  csg.c  csg.h  dbvt.c  dbvt.h  shape.c
src/math/common/: CMakeLists.txt  float32.c  float32.h  geometry.c  geometry.h  kas_math.c  kas_math.h  matrix.c  matrix.h  quaternion.c  quaternion.h  transform.c  transform.h  vector.c  vector.h
src/math/dynamics/: CMakeLists.txt  contact_database.c  contact_database.h  contact_solver.c  contact_solver.h  dynamics.h  island.c  island.h  physics_pipeline.c  physics_pipeline.h  rigid_body.c  rigid_body.h
src/math/random/: CMakeLists.txt  kas_random.h  rng.c
src/memory/: CMakeLists.txt  allocator.c  allocator.h
src/misc/: CMakeLists.txt  cmd.c  cmd.h  kas_string.c  kas_string.h  log.c  log.h  serialize.c  serialize.h
src/misc/debug/: CMakeLists.txt  allocator_debug.c  allocator_debug.h
src/misc/profiler/: CMakeLists.txt  kas_profiler.c  kas_profiler.h  kaspf_reader.c
src/misc/ui/: CMakeLists.txt  ui_build.c  ui_core.c  ui_local.h  ui_public.h
src/renderer/: CMakeLists.txt  r_camera.c  r_core.c  r_debug.c  r_gl.c  r_init.c  r_local.h  r_main.c  r_mesh.c  r_proxy3d.c  r_public.h  r_scene.c  r_ui.c
src/sys/: CMakeLists.txt  sys_arch.c  sys_common.h  sys_event.c  sys_filesystem.c  sys_gl.h  sys_graphics.c  sys_init.c  sys_input.c  sys_local.h  sys_public.h  task.c
src/sys/linux/: CMakeLists.txt  kernel_tracer.c  linux_arch.c  linux_error.c  linux_filesystem.c  linux_local.h  linux_public.h  linux_sync_primitives.c  linux_thread.c  linux_timer.c  main.c
src/sys/sdl3_wrapper/: CMakeLists.txt  sdl3_wrapper_event.c  sdl3_wrapper_gl.c  sdl3_wrapper_input.c  sdl3_wrapper_local.h  sdl3_wrapper_public.h  sdl3_wrapper_window.c
src/sys/wasm/: CMakeLists.txt  main.c  wasm_arch.c  wasm_error.c  wasm_filesystem.c  wasm_local.h  wasm_public.h  wasm_sync_primitives.c  wasm_thread.c  wasm_timer.c
src/sys/windows/: CMakeLists.txt  WinMain.c  kernel_tracer.c  win_arch.c  win_error.c  win_filesystem.c  win_local.h  win_public.h  win_sync_primitives.c  win_thread.c  win_timer.c
test/: CMakeLists.txt  test_allocator.c  test_container.c  test_hash.c  test_local.h  test_main.c  test_math.c  test_public.h  test_repetition.c  test_rng.c  test_serialize.c  test_string.c
